--- a/style.css
+++ b/style.css
@@ -144,11 +144,7 @@
         margin-top : -150px;
     }
 
-/*page_exposition*/
-.page_expo
-    {
-        background-color: rgb(34, 110, 180);
-    }
+/*barre de navigation*/
 .nav
     {
         display: flex;
@@ -173,31 +169,103 @@
     {
         background-color: rgb(34, 110, 180);
     }
+
+/*page_exposition*/
+.page_expo
+    {
+        background-color: rgb(34, 110, 180);
+    }
 .expo 
     {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 40%;
-        margin: 0 auto;
+        width: 45%;
+        margin: 4% auto;
+        padding: 2%;
         text-align: justify;
-        font-size: 22px;
+        font-size: 24px;
+        background-color: rgb(37, 78, 153, 0.5);
     }
 .expo h1
     {
         text-align: center;
-        margin: 40px 0;
+        margin: 25px 0;
         padding: 20px 0;
         border: 5px solid black;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+p
+    {
+        margin: 20px 0;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+
+/*image page expo*/
 .eb_logo
     {
         float: left;
-        margin-right: 20px;
+        margin: 40px 20px 100px 0;
+        border-radius: 10px;
     }
-.introduction
+.slider
     {
-        margin: 10px 0;
-        vertical-align: top;
+        margin: 20px 0;
+        overflow: hidden;
+        border: 4px solid white;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.6);
     }
-    
+.banniere
+    {
+        width: calc(864px*3);
+        animation: mouve 20s infinite;
+    }
+.slide
+    {
+        float: left;
+    }
+@keyframes mouve 
+    {
+        0% {
+            transform: translateX(0);
+        }
+        11% {
+            transform: translateX(0);
+        }
+        22% {
+            transform: translateX(0);
+        }
+        33% {
+            transform: translateX(-864px);
+        }
+        44% {
+            transform: translateX(-864px);
+        }
+        55% {
+            transform: translateX(-864px);
+        }
+        66% {
+            transform: translateX(-1728px);
+        }
+        77% {
+            transform: translateX(-1728px);
+        }
+        88% {
+            transform: translateX(-1728px);
+        }
+        100% {
+            transform: translateX(0);
+        }
+    }
+.img_projection
+    {
+        margin: 20px 0 20px 20px;
+        float: right;
+        border: 2px solid black;
+        border-radius: 10px 0;
+        box-shadow: 5px 5px 0px rgb(0, 0, 0);
+    }
+.video
+    {
+        margin: 30px auto 10px;
+    }
