--- a/style.css
+++ b/style.css
@@ -386,24 +386,24 @@ nav a:hover
     }
 .introduction
     {
-        margin: 4% 0;
+        margin: 4% 0 2%;
         padding: 0 2%;
     }
-.button_survole
+.button_survol
     {
         position: absolute;
-        margin-top: -3%;
-        margin-left: 45%;
-        width: 2%;
-        background-color: teal;
+        margin-top: -1.8%;
+        margin-left: 2%;
+        padding: 0.5% 0.5% 10% 0.5%;
+        width: 1.6%;
     }
 .suite_introduction
     {
         display: none;
-        margin: 4% 0;
         padding: 0 2%;
+        margin: 0 0 3% 0;
     }
-.survole:hover .suite_introduction
+.survol:hover .suite_introduction
     {
         display: flex;
     }
@@ -465,4 +465,15 @@ nav a:hover
         height: auto;
         margin-top: -0.1%;
         margin-left: 15.1%;
+    }
+.conclusion
+    {
+        margin: 4% 0 5%;
+        padding: 0 2%;
+    }
+.interview h1
+    {
+        text-align: center;
+        margin: 5% 0 2%;
+        font-family: yeseva, sans-serif;
     }
